--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+#row1{
+	background:#db4e44
+}
+#row2{
+background:	#b85851
+}
+#row3{
+	background:#998887;
+}
+#row4{
+	background:#d9c9c7
+}
